# Chip-8-Emulator

./: CMakeLists.txt  compile_flags.txt
include/: cpu.h  display.h  input.h  main.h  opcodes.h
src/: cpu.c  display.c  input.c  main.c  opcodes.c
